--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "ckeditor5-build-classic-mathtype": "^1.0.0",
+    "datatables.net": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
+    "datatables.net-responsive": "^2.2.9",
+    "datatables.net-rowreorder": "^1.2.8",
     "heroicons-react": "^1.4.1",
     "html-react-parser": "^1.3.0",
     "isset-php": "^1.0.6",
@@ -23,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
